--- a/css/styles.css
+++ b/css/styles.css
@@ -255,13 +255,19 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .modal button[data-modal-close] {
+  display: flex;
   position: absolute;
+  padding: 5px;
   top: 8px;
   right: 8px;
   color: #000000;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: var(--background-color);
+}
+.modal button[data-modal-close]:hover,
+.modal button[data-modal-close]:focus {
+  fill: var(--accent-color);
 }
 .form {
   padding: 0 40px;
@@ -277,22 +283,81 @@ img {
   color: var(--title-text-color);
 }
 .form-field {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 10px;
 }
 .form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
 }
 .form-input {
-  padding: 11px 12px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 11px 12px 11px 42px;
   margin-top: 4px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
-.form-input:focus {
+.modal-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  fill: var(--title-text-color);
+}
+.form-input:hover,
+.form-input:focus,
+.form-field textarea:hover,
+.form-field textarea:focus {
   border: 1px solid var(--accent-color);
+}
+/* .form-field:focus-within .modal-icon {
+  fill: var(--accent-color);
+} */
+.form-input:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+.form-field textarea {
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-top: 4px;
+  padding: 12px 16px;
+  width: 100%;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.submit-btn {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  background-color: var(--accent-color);
+  color: var(--second-accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: var(--third-accent-color);
 }
 /* ---------------Benefits------------- */
 .benefits.list {
@@ -449,7 +514,6 @@ img {
 }
 .clients svg {
   width: 106px;
-  /* height: 60px; */
 }
 .icons.link:hover,
 .icons.link:focus {
@@ -465,6 +529,9 @@ footer {
 .footer.container {
   display: flex;
   align-items: baseline;
+}
+.footer-contacts {
+  width: 226px;
 }
 .footer .item {
   margin-top: 9px;
@@ -489,7 +556,6 @@ footer {
 .address .link:focus {
   color: var(--accent-color);
 }
-
 .social-title,
 .send-title {
   font-weight: 700;
@@ -521,6 +587,42 @@ footer .social.link:hover {
 }
 .send-block {
   margin-left: 93px;
+}
+.send-block button {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 5px;
+  margin-left: 12px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  background-color: var(--accent-color);
+  color: var(--second-accent-color);
+  fill: var(--second-accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.send-input {
+  padding: 15px;
+  min-width: 358px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.send-block .icon-send {
+  vertical-align: middle;
+  margin-left: 10px;
 }
 /*------------------Portfolio page-------------- */
 /* -----------Filter buttons---------- */
