--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,8 @@ img {
   fill: var(--accent-color);
 }
 .form {
+  display: block;
+  text-align: center;
   padding: 0 40px;
   margin-top: 12px;
 }
@@ -289,7 +291,9 @@ img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 10px;
+}
+.form-field + .form-field {
+  margin-top: 10px;
 }
 .form-label {
   font-size: 12px;
