--- a/css/styles.css
+++ b/css/styles.css
@@ -296,22 +296,27 @@ img {
   margin-top: 10px;
 }
 .form-label {
+  margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--primary-text-color);
 }
+.form-icon {
+  position: relative;
+  width: 100%;
+}
 .form-input {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 11px 12px 11px 42px;
-  margin-top: 4px;
-  width: 100%;
+  width: inherit;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
 .modal-icon {
   position: absolute;
   top: 50%;
+  transform: translateY(-50%);
   left: 12px;
   display: inline-block;
   width: 18px;
@@ -332,9 +337,9 @@ img {
   resize: none;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-top: 4px;
   padding: 12px 16px;
   width: 100%;
+  height: 120px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
